Change UI order on mobile, prevent double tap to zoom on buttons

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -51,7 +51,7 @@ header h1 {
 	justify-content: center;
 	width: 100%;
 	gap: 2rem;
-	padding: 2rem 0;
+	padding: 2rem 0 0 0;
 }
 
 .board {
@@ -145,6 +145,8 @@ header h1 {
 	gap: 1rem;
 	width: 100%;
 	max-width: 30rem;
+	padding: 1.5rem 0 0 0;
+	touch-action: manipulation;
 }
 
 .btn {
@@ -364,7 +366,6 @@ header h1 {
 
 	#boards {
 		gap: 3rem;
-		padding: 3rem 0;
 	}
 
 	#speeds div label {
@@ -373,21 +374,30 @@ header h1 {
 }
 
 @media only screen and (min-width: 1024px) {
-	header h1 {
-		font-size: 8.45rem;
-	}
-
 	body {
 		margin: 0 0.5rem;
+	}
+
+	header h1 {
+		font-size: 8.45rem;
 	}
 
 	#wrapper {
 		max-width: 63rem;
 	}
 
+	#messageBox {
+		order: 1;
+	}
 	#buttons {
+		order: 3;
+		padding: 0;
 		max-width: 100%;
 		grid-template-columns: repeat(5, 1fr);
+	}
+	#boards {
+		order: 2;
+		padding: 3rem;
 	}
 
 	#playerVsComputer {
